# atg-math

./: CMakeLists.txt  README.md
cmake/: GenInfo.cmake  information.cpp.in  information.h.in
include/: aabb.h  atg_math.h  constants.h  functions.h  information.h  library.h  matrix.h  scalar.h  vector.h
include/atg-math/: aabb.h  base_type.hpp  complex.hpp  conditional.h  constants.h  definitions.h  functions.h  geometry.hpp  information.h  intersection.hpp  library.h  matrix.h  scalar.h  vector.h
include/public/: atg_math.h
src/: information.cpp  intersection.cpp  main.cpp
test/: library_test.cpp  matrix_tests.cpp  vector2_tests.cpp  vector4_tests.cpp  vector8_tests.cpp  vector_tests.cpp  version_test.cpp
